--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <style>
         .fa-brands{
             font-size: 22px;
+            color: rgb(20, 20, 20);
+        }
+
+        #team{
+            background-color: rgb(246, 249, 255);
         }
     </style>
 </head>
@@ -59,9 +64,9 @@
             </div>
         </div>
     </div>
-    <hr class="mt-4"/>  
+    <hr class="mt-4 mb-0"/>  
     <section id="team">
-        <div class="container">
+        <div class="container pt-3">
             <h2>Nosso time</h2>
             <div class="mt-4">
                 <div class="row">
@@ -73,9 +78,9 @@
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <hr>
                                 <div class="d-flex justify-content-lg-evenly">
-                                    <i class="fa-brands fa-linkedin"></i>
-                                    <i class="fa-brands fa-twitter"></i>
-                                    <i class="fa-brands fa-square-facebook"></i>
+                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -88,9 +93,9 @@
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <hr>
                                 <div class="d-flex justify-content-lg-evenly">
-                                    <i class="fa-brands fa-linkedin"></i>
-                                    <i class="fa-brands fa-twitter"></i>
-                                    <i class="fa-brands fa-square-facebook"></i>
+                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -103,9 +108,9 @@
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <hr>
                                 <div class="d-flex justify-content-lg-evenly">
-                                    <i class="fa-brands fa-linkedin"></i>
-                                    <i class="fa-brands fa-twitter"></i>
-                                    <i class="fa-brands fa-square-facebook"></i>
+                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
                                 </div>
                             </div>
                         </div>
