--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <style>
+        body{
+            font-family: 'Roboto', sans-serif;
+        }
         .fa-brands{
             font-size: 22px;
             color: rgb(20, 20, 20);
@@ -17,12 +22,17 @@
         #team{
             background-color: rgb(246, 249, 255);
         }
+
+        #team, #products{
+            padding-top: 16px;
+            padding-bottom: 16px;
+        }
     </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <a class="navbar-brand" href="#">Loja</a>
+            <a class="navbar-brand" href="#"><h2>Loja Online</h2></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +48,7 @@
                         <a class="nav-link" href="#team">Nosso time</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Produtos</a>
+                        <a class="nav-link" href="#products">Produtos</a>
                     </li>
                 </ul>
             </div>
@@ -66,7 +76,7 @@
     </div>
     <hr class="mt-4 mb-0"/>  
     <section id="team">
-        <div class="container pt-3">
+        <div class="container">
             <h2>Nosso time</h2>
             <div class="mt-4">
                 <div class="row">
@@ -116,6 +126,92 @@
                         </div>
                     </div>
                   </div>
+            </div>
+        </div>
+    </section>
+    <hr class="m-0"/>  
+    <section id="products">
+        <div class="container">
+            <h2>Produtos</h2>
+            <div class="mt-4">
+                <div class="row">
+                    <div class="col d-flex justify-content-center">
+                        <div class="card " style="width: 18rem;">
+                            <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-center">
+                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                <div class="d-flex justify-content-center">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <hr>
+                                <p class="text-center">R$ 25,99</p>
+                                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Adicionar ao carrinho</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-center">
+                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                <div class="d-flex justify-content-center">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <hr>
+                                <p class="text-center">R$ 25,99</p>
+                                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Adicionar ao carrinho</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-center">
+                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                <div class="d-flex justify-content-center">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <hr>
+                                <p class="text-center">R$ 25,99</p>
+                                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Adicionar ao carrinho</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col d-flex justify-content-center">
+                        <div class="card" style="width: 18rem;">
+                            <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
+                            <div class="card-body d-flex flex-column justify-content-center">
+                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
+                                <div class="d-flex justify-content-center">
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-solid fa-star"></i>
+                                    <i class="fa-regular fa-star"></i>
+                                </div>
+                                <hr>
+                                <p class="text-center">R$ 25,99</p>
+                                <button type="button" class="btn btn-primary"><i class="fa-solid fa-cart-shopping"></i> Adicionar ao carrinho</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
