correcting the color of the stars

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
             color: rgb(20, 20, 20);
         }
 
+        .fa-star{
+            color: #e6bc53;
+        }
+
         #team{
             background-color: rgb(246, 249, 255);
         }
