--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             background-color: rgb(246, 249, 255);
         }
 
-        #team, #products{
+        #who, #team, #products{
             padding-top: 16px;
             padding-bottom: 16px;
         }
@@ -46,7 +46,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Quem somos</a>
+                        <a class="nav-link" href="#who">Quem somos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#team">Nosso time</a>
@@ -78,7 +78,30 @@
             </div>
         </div>
     </div>
-    <hr class="mt-4 mb-0"/>  
+    <hr class="mt-4 mb-0"/>
+    <section id="who">
+        <div class="container">
+            <h2>Quem somos</h2>
+            <div>
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Est laborum</h5>
+                                <p class="card-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                <!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <img src="https://img.freepik.com/free-vector/design-process-concept-landing-page_23-2148313670.jpg" class="img-fluid rounded-start" alt="...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr class="m-0"/>  
     <section id="team">
         <div class="container">
             <h2>Nosso time</h2>
@@ -143,7 +166,7 @@
                         <div class="card " style="width: 18rem;">
                             <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
                             <div class="card-body d-flex flex-column justify-content-center">
-                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <h5 class="card-title text-center">Lorem ipsum</h5>
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                                 <div class="d-flex justify-content-center">
                                     <i class="fa-solid fa-star"></i>
@@ -162,7 +185,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
                             <div class="card-body d-flex flex-column justify-content-center">
-                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <h5 class="card-title text-center">Lorem ipsum</h5>
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <div class="d-flex justify-content-center">
                                     <i class="fa-solid fa-star"></i>
@@ -181,7 +204,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
                             <div class="card-body d-flex flex-column justify-content-center">
-                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <h5 class="card-title text-center">Lorem ipsum</h5>
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <div class="d-flex justify-content-center">
                                     <i class="fa-solid fa-star"></i>
@@ -200,7 +223,7 @@
                         <div class="card" style="width: 18rem;">
                             <img src="https://img.freepik.com/fotos-premium/pintura-a-oleo-abstrata-para-os-olhos_807701-29.jpg" class="card-img-top" alt="...">
                             <div class="card-body d-flex flex-column justify-content-center">
-                                <h5 class="card-title text-center">Fulano de Tal</h5>
+                                <h5 class="card-title text-center">Lorem ipsum</h5>
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <div class="d-flex justify-content-center">
                                     <i class="fa-solid fa-star"></i>
