--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
             background-color: rgb(246, 249, 255);
         }
 
+        #team .card{
+            margin: 8px 0;
+        }
+
+        #team ul{
+            list-style-type: none;
+            padding: 0;
+        }
+
         #who, #team, #products, #footer{
             padding-top: 16px;
             padding-bottom: 16px;
@@ -121,11 +130,11 @@
                                 <h5 class="card-title text-center">Fulano de Tal</h5>
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <hr>
-                                <div class="d-flex justify-content-lg-evenly">
-                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                                </div>
+                                <ul class="d-flex justify-content-lg-evenly">
+                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -136,11 +145,11 @@
                                 <h5 class="card-title text-center">Fulano de Tal</h5>
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <hr>
-                                <div class="d-flex justify-content-lg-evenly">
-                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                                </div>
+                                <ul class="d-flex justify-content-lg-evenly">
+                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -151,11 +160,11 @@
                                 <h5 class="card-title text-center">Fulano de Tal</h5>
                                 <p class="card-text text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt.</p>
                                 <hr>
-                                <div class="d-flex justify-content-lg-evenly">
-                                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
-                                    <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
-                                </div>
+                                <ul class="d-flex justify-content-lg-evenly">
+                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-square-facebook"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -292,7 +301,7 @@
         <div class="container d-flex flex-wrap justify-content-between align-items-center">
             <div class="col-md-4 d-flex align-items-center">
                 <a href="#" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">Loja Online</a>
-                <span class="text-muted"> © 2021 Company, Inc</span>
+                <span class="text-muted"> © 2023 Company, Inc</span>
             </div>
       
             <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
